--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,6 +63,12 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+
+body {
+  padding: 20px;
+}
+
+
 a {
   color: #1772d0;
   text-decoration: none;
@@ -84,18 +90,18 @@ a {
   font-size: 15px
 }
 
-table {
-  width:100%;
-  border:0px;
-  border-spacing:0px;
-  border-collapse:separate;
-  margin-right:auto;
-  margin-left:auto;
+hr {
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+  border: none;
+  height: 1px;
+  color: #333; /* old IE */
+  background-color: #333; /* Modern Browsers */
 }
 
-heading {
-  font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 26px;
+li {
+  margin: 10px;
 }
 
 papertitle {
@@ -104,10 +110,6 @@ papertitle {
   font-weight: 700
 }
 
-name {
-  font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 36px;
-}
 
 mainauthor {
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
@@ -116,9 +118,11 @@ mainauthor {
   text-decoration: underline; 
 }
 
-/*span.highlight {
-  background-color: #ffffd0;
-}*/
+.name {
+  font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  font-size: 40px;
+  text-align: center;
+}
 
 
 /*Information list as two column flex box*/
@@ -126,8 +130,8 @@ mainauthor {
   width: 100%;
   max-width: 800px;
 
-  margin-right:auto;
-  margin-left:auto;
+  margin-right: auto;
+  margin-left: auto;
 
   display: flex;
   flex-direction: column;
@@ -139,7 +143,6 @@ mainauthor {
 /*Background and info*/
 .personal {
   display: flex;
-
   flex-direction: row;
   align-items: center;
 }
@@ -152,23 +155,17 @@ mainauthor {
   max-width: 75%;
 }
 
-/*Hide the picture when using a phone*/
-/*https://stackoverflow.com/questions/16550485/...
-...hide-div-tag-on-mobile-view-only*/
-@media screen and (max-width: 600px) {
-  #avatar {
-    visibility: hidden;
-    clear: both;
-    float: left;
-    margin: 10px auto 5px 20px;
-    width: 28%;
+/*Hide the images when using a phone*/
+/*https://stackoverflow.com/a/23946351/3928018*/
+@media (max-width: 600px) {
+  .image-hidden {
     display: none;
   }
 }
 
 
-/*Articles list as a flex box*/
-.articles {
+/*Articles and talks list as flex boxes*/
+.list {
   width:100%;
   max-width:800px;
 
@@ -185,13 +182,15 @@ mainauthor {
 
 
 /*Each article is a flex box*/
-.article {
+.element {
+  width:100%;
+
   display: flex;
 
   flex-direction: row;
   align-items: center;
 
-  flex-wrap: nowrap;
+  /*flex-wrap: nowrap;*/
 
   /*padding: 20px;*/
 }
@@ -213,6 +212,15 @@ mainauthor {
   flex: 0 1 75%;
 }
 
+/* Info in each talk item */
+.talk-info {
+  padding: 15px;
+}
+
+.extra-info {
+  float: left;
+  width: 100%;
+}
 
 /*Credits section at the end*/
 .credits {
