--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,22 +5,30 @@ th,
 tr,
 p,
 a {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px
+  /* font-family: 'Open Sans', Arial, Helvetica, sans-serif; */
+  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: 'Roboto', sans-serif;
+  font-size: 17px
 }
+
+
 
 body {
   padding: 20px;
 }
 
 a {
-  color: hsl(210, 80%, 45%);
+  /* color: hsl(210, 80%, 45%); */
+  color: black;
   text-decoration: none;
+  padding: 0 5px;
+  border-radius: 5px;
+  background: rgba(255, 182, 182, 0.5);
 }
 
 a:focus,
 a:hover {
-  color: hsl(32, 87%, 55%);
+  color: hsl(162, 100%, 37%);
   text-decoration: none;
 }
 
@@ -52,9 +60,10 @@ mainauthor {
 }
 
 .name {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 40px;
-  text-align: center;
+  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: 'Comforter', cursive;
+  font-size: 70px;
+  text-align: left;
 }
 
 
@@ -86,6 +95,7 @@ mainauthor {
   padding: 10%;
   width: 75%;
   max-width: 75%;
+  margin-top: 50px
 }
 
 /*Hide the images when using a phone*/
@@ -167,4 +177,10 @@ mainauthor {
 
   margin-right:auto;
   margin-left:auto;
+}
+
+.full-line {
+  /* border-image: linear-gradient(0deg,#1095c1 5px,#0000 0) fill 0//0 100vw 0 0; */
+  border-image: linear-gradient(0deg, rgba(255, 182, 182, 0.5) 7px, #0000 0) fill 0//0 100vw 0 0;
+  padding: 10px 0;
 }
